options for pretrained models

--- a/TripletModels.ipynb
+++ b/TripletModels.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "3d450bdf-5923-4b87-8b61-6133cd4d7491",
    "metadata": {},
    "outputs": [],
@@ -28,6 +28,7 @@
     "from Utils import Constants\n",
     "import cv2\n",
     "from facenet_pytorch import InceptionResnetV1\n",
+    "import copy\n",
     "from Models import *\n",
     "from DataLoaders import *"
    ]
@@ -1555,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "ad5bca33",
    "metadata": {
     "tags": []
@@ -1567,46 +1568,22 @@
      "text": [
       "(4869, 167)\n",
       "(1209, 167)\n",
-      "model being saved to ../../data/models/dualencoder_resnet18_h400_ed3triplet_decoder__st600_a400_g400_std2_ad2_gd2_rbalanced_pretrain\n",
-      "epoch 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/rapids/lib/python3.8/site-packages/torch/nn/functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /pytorch/c10/core/TensorImpl.h:1156.)\n",
-      "  return torch.max_pool2d(input, kernel_size, stride, padding, dilation, ceil_mode)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train loss 0.0 train embed loss 2.664711440096096 train accuracy [0.0, 0.0, 0.0]\n",
-      "val loss 15.125073738098145 val_embed_loss 29.042501792907714 val accuracy [0.022, 0.174, 0.591] val f1 [0.019, 0.093, 0.268]\n",
-      "saved history to ../../data/results/history_dualencoder_resnet18_h400_ed3triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "model being saved to ../../data/models/dualencoder_model_h400_ed3triplet_decoder__st600_a400_g400_std2_ad2_gd2_rbalanced_pretrain\n",
+      "epoch 0\n",
+      "train loss 0.0 train embed loss 2.5958622852150275 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 0.0 val_embed_loss 2.6843365240097046 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_model_h400_ed3triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
       "epoch 1\n",
-      "train loss 0.0 train embed loss 1.569779401531025 train accuracy [0.0, 0.0, 0.0]\n",
-      "val loss 14.991635131835938 val_embed_loss 1.257501859664917 val accuracy [0.023, 0.246, 0.593] val f1 [0.024, 0.106, 0.231]\n",
-      "saved history to ../../data/results/history_dualencoder_resnet18_h400_ed3triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "train loss 0.0 train embed loss 1.6906360673661134 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 0.0 val_embed_loss 1.3279559993743897 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_model_h400_ed3triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
       "epoch 2\n",
-      "train loss 0.0 train embed loss 1.2533772423559306 train accuracy [0.0, 0.0, 0.0]\n",
-      "val loss 14.96999610900879 val_embed_loss 1.303478388786316 val accuracy [0.152, 0.214, 0.596] val f1 [0.077, 0.11, 0.229]\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "Can't pickle local object 'ResNet18.<locals>.<lambda>'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-5785390a2314>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    197\u001b[0m )\n\u001b[1;32m    198\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 199\u001b[0;31m m,h = train_model(\n\u001b[0m\u001b[1;32m    200\u001b[0m \u001b[0;31m#     TripletModel(),\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    201\u001b[0m \u001b[0;31m#     get_model('abstractmodeltriplet_decoder__st600_a400_g400_std2_ad2_gd2_balanced'),\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-6-5785390a2314>\u001b[0m in \u001b[0;36mtrain_model\u001b[0;34m(model, train_df, validation_df, root, epochs, lr, batch_size, patience, loss_weights, save_path, histogram, upsample, random_upsample, softmax_upsample_weights, upsample_validation, random_upsample_validation, embedding_loss_weight, classification_loss_weight, starting_loss, **kwargs)\u001b[0m\n\u001b[1;32m    161\u001b[0m         \u001b[0;31m#don't save immediately in case I cancel training\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    162\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mbest_val_loss\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mval_loss\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 163\u001b[0;31m             \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msave_path\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    164\u001b[0m             \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msave_path\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'_states'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    165\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'saving model'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/envs/rapids/lib/python3.8/site-packages/torch/serialization.py\u001b[0m in \u001b[0;36msave\u001b[0;34m(obj, f, pickle_module, pickle_protocol, _use_new_zipfile_serialization)\u001b[0m\n\u001b[1;32m    377\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0m_use_new_zipfile_serialization\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    378\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0m_open_zipfile_writer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mopened_file\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mopened_zipfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 379\u001b[0;31m                 \u001b[0m_save\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopened_zipfile\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpickle_module\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpickle_protocol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    380\u001b[0m                 \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    381\u001b[0m         \u001b[0m_legacy_save\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopened_file\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpickle_module\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpickle_protocol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/conda/envs/rapids/lib/python3.8/site-packages/torch/serialization.py\u001b[0m in \u001b[0;36m_save\u001b[0;34m(obj, zip_file, pickle_module, pickle_protocol)\u001b[0m\n\u001b[1;32m    482\u001b[0m     \u001b[0mpickler\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle_module\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPickler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_buf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprotocol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mpickle_protocol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    483\u001b[0m     \u001b[0mpickler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpersistent_id\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpersistent_id\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 484\u001b[0;31m     \u001b[0mpickler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    485\u001b[0m     \u001b[0mdata_value\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_buf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetvalue\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    486\u001b[0m     \u001b[0mzip_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwrite_record\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data.pkl'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata_value\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata_value\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: Can't pickle local object 'ResNet18.<locals>.<lambda>'"
+      "train loss 0.0 train embed loss 1.2914885343337545 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 0.0 val_embed_loss 1.5406093716621398 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saving model\n",
+      "saved history to ../../data/results/history_dualencoder_model_h400_ed3triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 3\n",
+      "curr loss class 0.0 embed 1.47938871383667 step 26  |   \r"
      ]
     }
    ],
@@ -1745,15 +1722,19 @@
     "            for i, [x_batch, y_batch] in enumerate(validation_loader):\n",
     "                x_batch = format_batch(x_batch,grad=False)\n",
     "                embedding,embedding_loss = embedding_step(model, x_batch)\n",
-    "                outputs, classification_loss = classifier_step(model,embedding,y_batch)\n",
+    "                if pretraining:\n",
+    "                    classification_loss = embedding_loss - embedding_loss\n",
+    "                else:\n",
+    "                    outputs, classification_loss = classifier_step(model,embedding,y_batch)\n",
     "                running_loss += classification_loss.item()\n",
     "                running_embed_loss += embedding_loss.item()\n",
     "                count += 1\n",
-    "                for i,(y,ypred) in enumerate(zip(y_batch, outputs)):\n",
-    "                    accuracy = Utils.categorical_accuracy(ypred.float(),format_y(y))\n",
-    "                    f1, precision, recall = Utils.macro_f1(torch.argmax(ypred.float(),axis=1),format_y(y))\n",
-    "                    running_accuracy[i] += accuracy.item()\n",
-    "                    running_f1[i] += f1.item()\n",
+    "                if not pretraining:\n",
+    "                    for i,(y,ypred) in enumerate(zip(y_batch, outputs)):\n",
+    "                        accuracy = Utils.categorical_accuracy(ypred.float(),format_y(y))\n",
+    "                        f1, precision, recall = Utils.macro_f1(torch.argmax(ypred.float(),axis=1),format_y(y))\n",
+    "                        running_accuracy[i] += accuracy.item()\n",
+    "                        running_f1[i] += f1.item()\n",
     "        return running_loss/count,running_embed_loss/count, [a/count for a in running_accuracy], [f/count for f in running_f1]\n",
     "    shorten = lambda array: [np.round(a, 3) for a in array]\n",
     "    \n",
@@ -1776,8 +1757,7 @@
     "            torch.save(model,save_path)\n",
     "            torch.save(model.state_dict(),save_path+'_states')\n",
     "            print('saving model')\n",
-    "            print(best_weights['encoder.base_model.conv2d_1a.conv.weight'].mean(), model.state_dict()['encoder.base_model.conv2d_1a.conv.weight'].mean())\n",
-    "            best_weights = model.state_dict()\n",
+    "            best_weights = copy.deepcopy(model.state_dict())\n",
     "            best_val_loss = val_loss\n",
     "            steps_since_improvement = 0\n",
     "        else:\n",
@@ -1799,11 +1779,6 @@
     "    model.load_state_dict(best_weights)\n",
     "    return model,hist\n",
     "\n",
-    "def InceptionResnet(pretrained=None,**kwargs):\n",
-    "    m = InceptionResnetV1(pretrained=pretrained,classify=True,num_classes=10,**kwargs)\n",
-    "    m.get_identifier = lambda : 'inception' + (pretrained if pretrained is not None else '')\n",
-    "    return m\n",
-    "    \n",
     "    \n",
     "model = TripletModel(\n",
     "    encoder=TripletFacenetEncoder(base_model=ResNet18()),\n",
@@ -1833,9 +1808,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model = TripletModel(\n",
+    "    encoder=TripletFacenetEncoder(base_model=DenseNet()),\n",
+    ")\n",
     "\n",
-    "\n",
-    "DenseNet()"
+    "m,h = train_model(\n",
+    "    model,\n",
+    "    train_labels,\n",
+    "    validation_labels,\n",
+    "    Constants.data_root,\n",
+    "    batch_size=50,\n",
+    "    embedding_loss_weight=1,\n",
+    "    classification_loss_weight=0,\n",
+    "    lr=.001,\n",
+    ")\n",
+    "del m\n",
+    "h"
    ]
   },
   {
@@ -1845,7 +1833,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tm.densenet161()"
+    "model = TripletModel(\n",
+    "    encoder=TripletFacenetEncoder(base_model=MobileNet()),\n",
+    ")\n",
+    "\n",
+    "m,h = train_model(\n",
+    "    model,\n",
+    "    train_labels,\n",
+    "    validation_labels,\n",
+    "    Constants.data_root,\n",
+    "    batch_size=50,\n",
+    "    embedding_loss_weight=1,\n",
+    "    classification_loss_weight=0,\n",
+    "    lr=.001,\n",
+    ")\n",
+    "del m\n",
+    "h"
    ]
   },
   {
@@ -1854,7 +1857,24 @@
    "id": "551e3ea6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model = TripletModel(\n",
+    "    encoder=TripletFacenetEncoder(),\n",
+    ")\n",
+    "\n",
+    "m,h = train_model(\n",
+    "    model,\n",
+    "    train_labels,\n",
+    "    validation_labels,\n",
+    "    Constants.data_root,\n",
+    "    batch_size=50,\n",
+    "    embedding_loss_weight=1,\n",
+    "    classification_loss_weight=0,\n",
+    "    lr=.001,\n",
+    ")\n",
+    "del m\n",
+    "h"
+   ]
   }
  ],
  "metadata": {
