--- a/BaseModels.ipynb
+++ b/BaseModels.ipynb
@@ -29,7 +29,8 @@
     "import cv2\n",
     "from facenet_pytorch import InceptionResnetV1\n",
     "from Models import *\n",
-    "from DataLoaders import *"
+    "from DataLoaders import *\n",
+    "import copy"
    ]
   },
   {
@@ -69,10 +70,10 @@
     "                validation_df,\n",
     "                root,\n",
     "                epochs=300,\n",
-    "                lr=.001,\n",
+    "                lr=.0001,\n",
     "                batch_size=200,\n",
     "                patience = 20,\n",
-    "                loss_weights = [2,1,.5],\n",
+    "                loss_weights = [5,2,1],\n",
     "                save_path=None,\n",
     "                histogram =False,\n",
     "                upsample=False,\n",
@@ -190,7 +191,7 @@
     "        print('val loss', val_loss, 'val accuracy', val_acc, 'val f1',val_f1)\n",
     "#         torch.save(model.state_dict(), save_path + '_epoch' + str(epoch))\n",
     "        if best_val_loss > val_loss:\n",
-    "            best_weights = model.state_dict()\n",
+    "            best_weights = copy.deepcopy(model.state_dict())\n",
     "            best_val_loss = val_loss\n",
     "            steps_since_improvement = 0\n",
     "            if epoch > 1:\n",
@@ -212,27 +213,45 @@
     "        save_train_history(model,hist,root=root)\n",
     "        if steps_since_improvement > patience:\n",
     "            break\n",
-    "    return model,hist\n",
+    "    return model,hist,best_val_loss\n",
     "\n",
-    "m,h = train_model(\n",
-    "    DualFacenetModel(\n",
-    "        hidden_dims = [1000],\n",
-    "        embedding_dropout=.4,\n",
-    "        st_dropout = .2,\n",
-    "        age_dropout = .2,\n",
-    "        gender_dropout = .2,\n",
-    "    ),\n",
-    "    train_labels,\n",
-    "    validation_labels,\n",
-    "    Constants.data_root,\n",
-    "    batch_size=100,\n",
-    "#     histogram=True,\n",
-    "    lr=.0001,\n",
-    "#     lr=10,\n",
-    "#     upsample=False,\n",
-    ")\n",
-    "del m\n",
-    "h"
+    "\n",
+    "models= [\n",
+    "    TripletModel(encoder=TripletFacenetEncoder(base_model=ResNet18(),base_name='resnetbase',embedding_dropout=.1)),\n",
+    "    TripletModel(encoder=TripletFacenetEncoder(base_model=ResNet18(),base_name='resnetbase',embedding_dropout=.5)),\n",
+    "    TripletModel(encoder=TripletFacenetEncoder(base_model=DenseNet(),base_name='densenetbase',embedding_dropout=.5)),\n",
+    "    TripletModel(encoder=TripletFacenetEncoder(base_model=MobileNet(),base_name='mobilenetbase',embedding_dropout=.5)),\n",
+    "    TripletModel(encoder=TripletFacenetEncoder(base_name='facenetbase',embedding_dropout=.5)),\n",
+    "]\n",
+    "\n",
+    "# def get_model(file,model=None):\n",
+    "#     if model is None:\n",
+    "#         model = torch.load(Constants.model_folder + file).to(torch.device('cpu'))\n",
+    "#     model.load_state_dict(torch.load(Constants.model_folder + file + '_states'))\n",
+    "#     model.eval()\n",
+    "#     return model\n",
+    "# pretrain_files = [\n",
+    "#     'dualencoder_resnetbase_h400_ed3triplet_decoder__st600_a400_g400_std2_ad2_gd2_rbalanced_pretrain',\n",
+    "#     'dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd2_rbalanced_pretrain',\n",
+    "# ]\n",
+    "# models = [get_model(file) for file in pretrain_files]\n",
+    "\n",
+    "res = []\n",
+    "for model in models:\n",
+    "    m,h,v = train_model(\n",
+    "        model\n",
+    "        train_labels,\n",
+    "        validation_labels,\n",
+    "        Constants.data_root,\n",
+    "        batch_size=100,\n",
+    "        lr=.0001,\n",
+    "    )\n",
+    "    entry = (m.get_identifier(),v)\n",
+    "    print('________________________________')\n",
+    "    print(entry)\n",
+    "    print('_______________________________')\n",
+    "    res.append(entry)\n",
+    "res"
    ]
   },
   {
