--- a/TripletModels.ipynb
+++ b/TripletModels.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "3d450bdf-5923-4b87-8b61-6133cd4d7491",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "bb156980",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
        "((6842, 166), (1711, 166))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "02e6f6cd-7a43-48de-a6ac-747821eddb8c",
    "metadata": {
     "scrolled": true,
@@ -1539,7 +1539,7 @@
        ")"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1568,22 +1568,132 @@
      "text": [
       "(4869, 167)\n",
       "(1209, 167)\n",
-      "model being saved to ../../data/models/dualencoder_model_h400_ed3triplet_decoder__st600_a400_g400_std2_ad2_gd2_rbalanced_pretrain\n",
-      "epoch 0\n",
-      "train loss 0.0 train embed loss 2.5958622852150275 train accuracy [0.0, 0.0, 0.0]\n",
-      "val loss 0.0 val_embed_loss 2.6843365240097046 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
-      "saved history to ../../data/results/history_dualencoder_model_h400_ed3triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "model being saved to ../../data/models/dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd2_rbalanced_pretrain\n",
+      "epoch 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/rapids/lib/python3.8/site-packages/torch/nn/functional.py:718: UserWarning: Named tensors and all their associated APIs are an experimental feature and subject to change. Please do not use them for anything important until they are released as stable. (Triggered internally at  /pytorch/c10/core/TensorImpl.h:1156.)\n",
+      "  return torch.max_pool2d(input, kernel_size, stride, padding, dilation, ceil_mode)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss 0.0 train embed loss 2.0131893170123196 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 2.22076584815979 val_embed_loss 2.22076584815979 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
       "epoch 1\n",
-      "train loss 0.0 train embed loss 1.6906360673661134 train accuracy [0.0, 0.0, 0.0]\n",
-      "val loss 0.0 val_embed_loss 1.3279559993743897 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
-      "saved history to ../../data/results/history_dualencoder_model_h400_ed3triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "train loss 0.0 train embed loss 1.4716413811761506 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 1.4466455721855163 val_embed_loss 1.4466455721855163 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
       "epoch 2\n",
-      "train loss 0.0 train embed loss 1.2914885343337545 train accuracy [0.0, 0.0, 0.0]\n",
-      "val loss 0.0 val_embed_loss 1.5406093716621398 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "train loss 0.0 train embed loss 1.3563700622441817 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 1.3890625715255738 val_embed_loss 1.3890625715255738 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
       "saving model\n",
-      "saved history to ../../data/results/history_dualencoder_model_h400_ed3triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
       "epoch 3\n",
-      "curr loss class 0.0 embed 1.47938871383667 step 26  |   \r"
+      "train loss 0.0 train embed loss 1.256538526136048 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 1.2623147869110107 val_embed_loss 1.2623147869110107 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saving model\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 4\n",
+      "train loss 0.0 train embed loss 1.2691518414993674 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 1.2465966653823852 val_embed_loss 1.2465966653823852 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saving model\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 5\n",
+      "train loss 0.0 train embed loss 1.2257610206701317 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 1.2685147786140443 val_embed_loss 1.2685147786140443 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 6\n",
+      "train loss 0.0 train embed loss 1.2138297424024465 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 0.9285408473014831 val_embed_loss 0.9285408473014831 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saving model\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 7\n",
+      "train loss 0.0 train embed loss 1.2013847237947035 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 0.9971898627281189 val_embed_loss 0.9971898627281189 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 8\n",
+      "train loss 0.0 train embed loss 1.194712436929041 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 0.9111989688873291 val_embed_loss 0.9111989688873291 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saving model\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 9\n",
+      "train loss 0.0 train embed loss 1.190429714261269 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 1.036863842010498 val_embed_loss 1.036863842010498 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 10\n",
+      "train loss 0.0 train embed loss 1.1665173531795034 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 1.0394586825370788 val_embed_loss 1.0394586825370788 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 11\n",
+      "train loss 0.0 train embed loss 1.1419388378153041 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 1.0660419249534607 val_embed_loss 1.0660419249534607 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 12\n",
+      "train loss 0.0 train embed loss 1.1689780342335603 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 1.0274648594856262 val_embed_loss 1.0274648594856262 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 13\n",
+      "train loss 0.0 train embed loss 1.1701498530348953 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 0.993142364025116 val_embed_loss 0.993142364025116 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 14\n",
+      "train loss 0.0 train embed loss 1.1639365997849678 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 0.9925163388252258 val_embed_loss 0.9925163388252258 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 15\n",
+      "train loss 0.0 train embed loss 1.148589153070839 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 0.9173644518852234 val_embed_loss 0.9173644518852234 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 16\n",
+      "train loss 0.0 train embed loss 1.1156692881973422 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 1.0447144627571106 val_embed_loss 1.0447144627571106 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 17\n",
+      "train loss 0.0 train embed loss 1.13169142421411 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 1.1645829129219054 val_embed_loss 1.1645829129219054 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 18\n",
+      "train loss 0.0 train embed loss 1.1189752792825505 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 1.0676474237442017 val_embed_loss 1.0676474237442017 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 19\n",
+      "train loss 0.0 train embed loss 1.1198798393716618 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 1.2088148260116578 val_embed_loss 1.2088148260116578 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 20\n",
+      "train loss 0.0 train embed loss 1.0983682305228955 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 1.0007388997077942 val_embed_loss 1.0007388997077942 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 21\n",
+      "train loss 0.0 train embed loss 1.161566220984167 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 1.0209578704833984 val_embed_loss 1.0209578704833984 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 22\n",
+      "train loss 0.0 train embed loss 1.1431271871741937 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 0.9425708317756653 val_embed_loss 0.9425708317756653 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 23\n",
+      "train loss 0.0 train embed loss 1.1279725274261163 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 1.0174093556404114 val_embed_loss 1.0174093556404114 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 24\n",
+      "train loss 0.0 train embed loss 1.1188348093811347 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 0.9761051917076111 val_embed_loss 0.9761051917076111 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 25\n",
+      "train loss 0.0 train embed loss 1.1355870676283935 train accuracy [0.0, 0.0, 0.0]\n",
+      "val loss 1.008259139060974 val_embed_loss 1.008259139060974 val accuracy [0.0, 0.0, 0.0] val f1 [0.0, 0.0, 0.0]\n",
+      "saved history to ../../data/results/history_dualencoder_resnetbase_h400_ed5triplet_decoder__st600_a400_g400_std2_ad2_gd23.csv\n",
+      "epoch 26\n",
+      "curr loss class 0.0 embed 1.0184043645858765 step 42  | \r"
      ]
     }
    ],
@@ -1750,6 +1860,8 @@
     "        print('train loss', avg_loss,'train embed loss',avg_embed_loss, 'train accuracy', shorten(avg_acc))\n",
     "        model.eval()\n",
     "        val_loss,val_embed_loss, val_acc, val_f1 = val_epoch(model)\n",
+    "        if pretraining:\n",
+    "            val_loss = val_embed_loss\n",
     "        print('val loss', val_loss, 'val_embed_loss', val_embed_loss, \n",
     "              'val accuracy', shorten(val_acc), 'val f1', shorten(val_f1))\n",
     "        #don't save immediately in case I cancel training\n",
@@ -1781,12 +1893,10 @@
     "\n",
     "    \n",
     "model = TripletModel(\n",
-    "    encoder=TripletFacenetEncoder(base_model=ResNet18()),\n",
+    "    encoder=TripletFacenetEncoder(base_model=ResNet18(),base_name='resnetbase',embedding_dropout=.5),\n",
     ")\n",
     "\n",
     "m,h = train_model(\n",
-    "#     TripletModel(),\n",
-    "#     get_model('abstractmodeltriplet_decoder__st600_a400_g400_std2_ad2_gd2_balanced'),\n",
     "    model,\n",
     "    train_labels,\n",
     "    validation_labels,\n",
@@ -1809,7 +1919,7 @@
    "outputs": [],
    "source": [
     "model = TripletModel(\n",
-    "    encoder=TripletFacenetEncoder(base_model=DenseNet()),\n",
+    "    encoder=TripletFacenetEncoder(base_model=DenseNet(),base_name='densenetbase',embedding_dropout=.5),\n",
     ")\n",
     "\n",
     "m,h = train_model(\n",
@@ -1834,7 +1944,7 @@
    "outputs": [],
    "source": [
     "model = TripletModel(\n",
-    "    encoder=TripletFacenetEncoder(base_model=MobileNet()),\n",
+    "    encoder=TripletFacenetEncoder(base_model=MobileNet(),base_name='mobilenetbase',embedding_dropout=.5),\n",
     ")\n",
     "\n",
     "m,h = train_model(\n",
@@ -1859,7 +1969,7 @@
    "outputs": [],
    "source": [
     "model = TripletModel(\n",
-    "    encoder=TripletFacenetEncoder(),\n",
+    "    encoder=TripletFacenetEncoder(base_name='facenetbase',embedding_dropout=.5),\n",
     ")\n",
     "\n",
     "m,h = train_model(\n",
@@ -1875,6 +1985,14 @@
     "del m\n",
     "h"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e2c1bc5-44fa-4467-b4b5-852b336c744b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
